[package]
name = "erd"
version = "0.1.0"
authors = ["Dave Challis <dave@suicas.net>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "6.1", features = ["alloc"] }
getopts = "0.2"

[dev-dependencies]
maplit = "1.0"
pretty_assertions = "0.7"